--- a/package.json
+++ b/package.json
@@ -26,27 +26,27 @@
   },
   "homepage": "https://github.com/tadger/react-drums",
   "devDependencies": {
+    "axios": "^0.15.2",
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
+    "classnames": "^2.2.0",
     "css-loader": "^0.21.0",
+    "dilla": "^1.8.0",
     "eslint-plugin-react": "^3.6.2",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
-    "react-hot-loader": "^1.3.0",
+    "lodash": "^3.10.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "axios": "^0.7.0",
-    "classnames": "^2.2.0",
-    "dilla": "^1.8.0",
-    "lodash": "^3.10.1",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0"
   }
 }
